force-app/main/default/objects/Career_Success__c/Career_Success__c.object-meta.xml
<CustomObject>
    <label>Research Target Guidance</label>
    <nameField>
        <displayFormat>RTG-{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Target Guidances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>