force-app/main/default/objects/Career_Success__c/fields/I_RS_Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Academic_Level__c</fullName>
    <label>Academic Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>