force-app/main/default/objects/Career_Success__c/fields/I_RS_Benchmarking_Unit__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Benchmarking_Unit__c</fullName>
    <label>Benchmarking Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>