force-app/main/default/objects/Career_Success__c/fields/I_RS_College__c.field-meta.xml
<CustomField>
    <fullName>I_RS_College__c</fullName>
    <label>College</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>