force-app/main/default/objects/Career_Success__c/fields/I_RS_Commencement_Year_at_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Commencement_Year_at_La_Trobe__c</fullName>
    <description>Employment start year at La Trobe University</description>
    <inlineHelpText>Employment start year at La Trobe University</inlineHelpText>
    <label>Commencement Year at La Trobe</label>
    <length>4</length>
    <type>Text</type>
</CustomField>