force-app/main/default/objects/Career_Success__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Career_Successes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>