force-app/main/default/objects/Career_Success__c/fields/I_RS_Department__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Department__c</fullName>
    <label>Department</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>