force-app/main/default/objects/Career_Success__c/fields/I_RS_Employment_Function__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Employment_Function__c</fullName>
    <label>Employment Function</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>