force-app/main/default/objects/Career_Success__c/fields/I_RS_FTE__c.field-meta.xml
<CustomField>
    <fullName>I_RS_FTE__c</fullName>
    <inlineHelpText>Full time equivalent as recorded in MyHR.</inlineHelpText>
    <label>FTE</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>