force-app/main/default/objects/Career_Success__c/fields/I_RS_Org_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Org_Unit_Code__c</fullName>
    <label>Org Unit Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>