force-app/main/default/objects/Career_Success__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <label>Organisation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>