force-app/main/default/objects/Career_Success__c/fields/I_RS_Output_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Output_Type__c</fullName>
    <inlineHelpText>Research output measure relevant to the benchmarking unit (e.g. Web of Science, HERDC Equivalent, Creative Output)</inlineHelpText>
    <label>Output Type</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>