force-app/main/default/objects/Career_Success__c/fields/I_RS_Performance_Measure__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Performance_Measure__c</fullName>
    <inlineHelpText>Research output measure relevant to the benchmarking unit (e.g. Web of Science, HERDC Equivalent, Creative Output)</inlineHelpText>
    <label>Performance Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>