force-app/main/default/objects/Career_Success__c/fields/I_RS_Performance_to_Target_Ratio_6_years__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Performance_to_Target_Ratio_6_years__c</fullName>
    <inlineHelpText>Ratio of average 6-years research output count to Career Success target</inlineHelpText>
    <label>Average performance to target ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>