force-app/main/default/objects/Career_Success__c/fields/I_RS_Performance_to_Target_Ratio_annual__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Performance_to_Target_Ratio_annual__c</fullName>
    <description>Ratio of annual research output count to Career Success target</description>
    <inlineHelpText>Ratio of annual research output count to Career Success target</inlineHelpText>
    <label>Annual performance to target ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>