force-app/main/default/objects/Career_Success__c/fields/I_RS_Research_Allocation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Allocation__c</fullName>
    <inlineHelpText>Percentage of normalised research allocation as recorded in AWP system.</inlineHelpText>
    <label>Research Allocation (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>