force-app/main/default/objects/Career_Success__c/fields/I_RS_Research_Output_Target__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output_Target__c</fullName>
    <description>Career Success target for the benchmarking unit, academic level and research allocation, adjusted by FTE</description>
    <inlineHelpText>Career Success target for the benchmarking unit, academic level and research allocation, adjusted by FTE</inlineHelpText>
    <label>Research Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>