force-app/main/default/objects/Career_Success__c/fields/I_RS_Research_Output_wt_Cnt_6_years_avg__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output_wt_Cnt_6_years_avg__c</fullName>
    <description>Average research output weighted count for the six most recent complete year prior to when Career Success end review is conducted (e.g. 2015-2020 outputs for 2020 Performance Plan, where end review is conducted in 2021).</description>
    <inlineHelpText>Average research output weighted count for the six most recent complete year prior to when Career Success end review is conducted (e.g. 2015-2020 outputs for 2020 Performance Plan, where end review is conducted in 2021).</inlineHelpText>
    <label>Average Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>