force-app/main/default/objects/Career_Success__c/fields/I_RS_Research_Output_wt_Count_annual__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output_wt_Count_annual__c</fullName>
    <description>Annual research output weighted count for the complete performance year (e.g. 2020 outputs for 2020 Performance Plan, where end review is conducted in 2021).</description>
    <inlineHelpText>Annual research output weighted count for the complete performance year (e.g. 2020 outputs for 2020 Performance Plan, where end review is conducted in 2021).</inlineHelpText>
    <label>Annual Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>